# WoHub

./: .gitignore  CLAUDE.md  WoHub-Agentification-Plan.md  docker-compose.yml
backend/: Dockerfile  app_logger.py  auth.py  config.py  database.py  main.py  pyproject.toml
backend/actions/: ai_analysis.py
backend/agent/: agent_decider.py  config.py  decider.py  llm.py  prompts.py  queue.py  store.py  tools.py  validator.py  worker.py
backend/ai/: context_builder.py  llm_client.py  strategy.py
backend/api/: __init__.py  agent.py  ai.py  channels.py  chat.py  health.py  klines.py  market.py  scanner.py  screenshots.py  settings.py  tasks.py  trading.py
backend/channels/: discord.py  sender.py  telegram.py
backend/klines/: __init__.py  classification.py  fetcher.py  indicators.py  models.py  patterns.py  service.py  structure.py
backend/screenshots/: __init__.py  pipeline.py
backend/scripts/: verify_testnet.py
backend/sources/: binance.py  bitget.py  bybit.py  chart_shot_client.py  divergence_classify.py  exchanges.py  http_client.py  okx.py  pine_screener.py
backend/tasks/: executor.py  outcome_poller.py  scheduler.py  tracker.py
backend/tests/: conftest.py  helpers.py  test_agent_api.py  test_agent_config.py  test_agent_decider.py  test_agent_enqueue.py  test_agent_llm.py  test_agent_probe_api.py  test_agent_queue.py  test_agent_schema.py  test_agent_stats.py  test_agent_store.py  test_agent_tools.py  test_agent_validator.py  test_agent_worker.py  test_ai_api.py  test_api.py  test_auth.py  test_auth_enforcement.py  test_channels_api.py  test_chat_api.py  (+41 more)
(+73 files in other folders)
