[project]
name = "wohub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0,<4.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "sources*", "channels*"]

[tool.pytest.ini_options]
markers = [
    "network: marks tests that make live network calls (deselect with '-m \"not network\"')",
]
